If applied, this changes the badge text from "vulnerable" to "urgent"

--- a/locales/en.json
+++ b/locales/en.json
@@ -179,7 +179,7 @@
       "laaReference": "LAA reference",
       "notProvided": "Not provided",
       "status": "Status",
-      "vulnerable": "Vulnerable",
+      "urgent": "Urgent",
       "tabs": {
         "clientDetails": "Client details",
         "caseDetails": "Case details",
